--- a/apps/web-ui/package.json
+++ b/apps/web-ui/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@acme/db": "workspace:*",
     "@acme/proto": "workspace:*",
     "@acme/ui": "workspace:*",
     "@bufbuild/buf": "^1.36.0",
@@ -24,7 +25,10 @@
     "@remix-run/react": "^2.11.1",
     "@remix-run/serve": "^2.11.1",
     "@t3-oss/env-core": "^0.11.0",
+    "drizzle-orm": "^0.33.0",
     "isbot": "^4.1.0",
+    "moment": "^2.30.1",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
