--- a/apps/web-ui/package.json
+++ b/apps/web-ui/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "postcss-import": "^15.1.0",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
