--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@manypkg/cli": "^0.21.0",
     "dotenv-cli": "^7.2.1",
     "prettier": "^3.2.5",
+    "@remix-run/serve": "^2.11.1",
     "turbo": "^2.0.3"
   },
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm@8.15.2",
   "workspaces": [
     "apps/*",
     "packages/*",
