--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv-cli": "^7.2.1",
     "prettier": "^3.2.5",
     "@remix-run/serve": "^2.11.1",
+    "drizzle-kit": "^0.24.0",
     "turbo": "^2.0.3"
   },
   "packageManager": "pnpm@8.15.2",
